--- a/TipTap/Module/MyDiary/Cell/TTMyDiaryCell.xib
+++ b/TipTap/Module/MyDiary/Cell/TTMyDiaryCell.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -16,38 +16,41 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="158"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="157.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="157.66666666666666"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diaryCard" translatesAutoresizingMaskIntoConstraints="NO" id="Gka-i8-Y5C">
-                        <rect key="frame" x="104" y="7" width="271" height="150.5"/>
+                        <rect key="frame" x="104" y="7" width="271" height="150.66666666666666"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Aug" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dvX-gx-k8L">
-                        <rect key="frame" x="60" y="12" width="25.5" height="17"/>
+                        <rect key="frame" x="59.999999999999993" y="12" width="25.666666666666664" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.14117647058823529" green="0.14117647058823529" blue="0.14117647058823529" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="day" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="faf-T8-aAw">
-                        <rect key="frame" x="137" y="38" width="35" height="24"/>
+                        <rect key="frame" x="137" y="38" width="31" height="24"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                         <color key="textColor" red="0.47843137254901957" green="0.78431372549019607" blue="0.73725490196078436" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10 TIPTAP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wdY-yu-iYn">
-                        <rect key="frame" x="219" y="38" width="57.5" height="14.5"/>
+                        <rect key="frame" x="215" y="38" width="57.666666666666686" height="14.666666666666664"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.59215686274509804" green="0.59215686274509804" blue="0.59215686274509804" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="서울특별시 망원동 키오스크" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fdu-n6-Ehy">
-                        <rect key="frame" x="219" y="57.5" width="135" height="14.5"/>
+                        <rect key="frame" x="215" y="57.666666666666664" width="135" height="14.333333333333336"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="135" id="EXt-Zr-5oU"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="서울대입구역" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uk5-5f-XJ9">
-                        <rect key="frame" x="219" y="95" width="135" height="15"/>
+                        <rect key="frame" x="215" y="95" width="135" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -60,12 +63,24 @@
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dots" translatesAutoresizingMaskIntoConstraints="NO" id="4bn-Db-Qgf">
-                        <rect key="frame" x="219" y="80" width="1" height="7"/>
+                        <rect key="frame" x="215" y="80" width="1" height="7"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="1" id="VsC-1d-tie"/>
                             <constraint firstAttribute="height" constant="7" id="waf-cu-Dc7"/>
                         </constraints>
                     </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5oc-HS-q0g">
+                        <rect key="frame" x="38" y="54" width="50" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="50" id="FLO-0N-khB"/>
+                            <constraint firstAttribute="height" constant="50" id="V2z-rp-sX1"/>
+                        </constraints>
+                        <state key="normal" image="checkboxOff"/>
+                        <state key="selected" image="checkboxOn"/>
+                        <connections>
+                            <action selector="pressedButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="j3h-LR-FPB"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="uk5-5f-XJ9" firstAttribute="leading" secondItem="fdu-n6-Ehy" secondAttribute="leading" id="8L3-IX-e3s"/>
@@ -74,7 +89,7 @@
                     <constraint firstItem="4bn-Db-Qgf" firstAttribute="top" secondItem="fdu-n6-Ehy" secondAttribute="bottom" constant="8" id="Ifx-pE-DLy"/>
                     <constraint firstItem="faf-T8-aAw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="38" id="M4c-Vq-NQl"/>
                     <constraint firstAttribute="trailing" secondItem="Gka-i8-Y5C" secondAttribute="trailing" id="NoI-M2-Cel"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="fdu-n6-Ehy" secondAttribute="trailing" constant="5" id="OVt-Wm-24P"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="fdu-n6-Ehy" secondAttribute="trailing" priority="800" constant="5" id="OVt-Wm-24P"/>
                     <constraint firstItem="uk5-5f-XJ9" firstAttribute="top" secondItem="4bn-Db-Qgf" secondAttribute="bottom" constant="8" id="RV0-lI-9zZ"/>
                     <constraint firstItem="Gka-i8-Y5C" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="104" id="S97-x6-zCI"/>
                     <constraint firstItem="uWa-Iu-fil" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="TTT-65-cP4"/>
@@ -85,8 +100,10 @@
                     <constraint firstItem="Gka-i8-Y5C" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottom" id="fGO-X2-Hnb"/>
                     <constraint firstItem="dvX-gx-k8L" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="60" id="p5a-Bv-Hff"/>
                     <constraint firstItem="fdu-n6-Ehy" firstAttribute="leading" secondItem="wdY-yu-iYn" secondAttribute="leading" id="pNE-g6-7Fb"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="uk5-5f-XJ9" secondAttribute="trailing" constant="5" id="toN-XT-c3w"/>
+                    <constraint firstItem="5oc-HS-q0g" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="qvL-X9-P64"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="uk5-5f-XJ9" secondAttribute="trailing" priority="800" constant="5" id="toN-XT-c3w"/>
                     <constraint firstItem="4bn-Db-Qgf" firstAttribute="leading" secondItem="fdu-n6-Ehy" secondAttribute="leading" id="u40-eN-u6c"/>
+                    <constraint firstItem="Gka-i8-Y5C" firstAttribute="leading" secondItem="5oc-HS-q0g" secondAttribute="trailing" constant="16" id="vWV-Oi-iWj"/>
                     <constraint firstItem="Gka-i8-Y5C" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="wwm-dD-Ttz"/>
                     <constraint firstItem="uWa-Iu-fil" firstAttribute="centerY" secondItem="dvX-gx-k8L" secondAttribute="centerY" id="xzS-Le-AaQ"/>
                 </constraints>
@@ -94,6 +111,7 @@
             <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="checkBox" destination="5oc-HS-q0g" id="cua-GA-vTq"/>
                 <outlet property="dayLabel" destination="faf-T8-aAw" id="soY-vA-F6F"/>
                 <outlet property="destinationLabel" destination="uk5-5f-XJ9" id="MQz-AJ-6qP"/>
                 <outlet property="lineView" destination="uWa-Iu-fil" id="exD-Ig-Zkq"/>
@@ -104,6 +122,8 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="checkboxOff" width="24" height="24"/>
+        <image name="checkboxOn" width="24" height="24"/>
         <image name="diaryCard" width="271" height="134"/>
         <image name="dots" width="1" height="7"/>
     </resources>
